--- a/templates/home.html
+++ b/templates/home.html
@@ -1,26 +1,19 @@
 {% include 'layout.html' %}
+<div class="container">
+  <h3>Add input to chat with the personal chatbot.</h3>
 
-<div class="container mt-5">
-  <h3>
-    Add input to chat with the personal chatbot.
-  </h3>
-
-  <div>
-    <div class="card text-center mt-3">
-      <div class="card-header">
-        Chat History:
-      </div>
-      <div class="card-body chat-history" id="chatHistory">
-        <!-- auto populate here -->
-        {% for response in chat_responses %}
-
+  <div class="card text-center mt-3" style="flex: 1; display: flex; flex-direction: column;">
+    <div class="card-header">Chat History:</div>
+    <div class="card-body chat-history" id="chatHistory">
+      {% for response in chat_responses %}
         <div class="{{ 'chat-message user-input' if loop.index0 is even else 'chat-message ai-response' }}">
           {{ response }}
         </div>
-        {% endfor %}
-      </div>
+      {% endfor %}
     </div>
   </div>
+</div>
+
 
   <div class="container" id="footer">
     <div class="input-group mb-3">
